# w3g-parser

./: .clang-format  flake.nix  meson.build
include/: baje_parser.h  meson.build
src/: baje_parser.cpp  main.cpp  meson.build
test/: baje_parser_test.cpp  meson.build
